// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadialTextCounterComponent should set radialCounterClass to radial-counter-danger radial-counter-pulse when inputTextLength >= DangerStartNumber  1`] = `
<pf-radial-text-counter
  ContentLength={[Function Number]}
  DangerStartNumber={[Function Number]}
  DisplayWarningColors="false"
  WarningStartNumber={[Function Number]}
  radialCounterClass={[Function String]}
  radialStartValue={[Function Number]}
  radialStrokeDashOffsetValue={[Function Number]}
>
  <span
    placement="bottom"
  >
    <svg
      class="radial-counter"
      height="15"
      width="20"
    >
      <circle
        class="radial-counter-underlay"
        cx="50%"
        cy="50%"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="radial-counter-overlay radial-counter-safe"
        cx="50%"
        cy="50%"
        fill="none"
        r="6"
        stroke-width="2"
        style="stroke-dashoffset: 37.6991;"
      />
    </svg>
  </span>
</pf-radial-text-counter>
`;

exports[`RadialTextCounterComponent should set radialCounterClass to radial-counter-warn radial-counter-pulse when inputTextLength >= WarningStartNumber  1`] = `
<pf-radial-text-counter
  ContentLength={[Function Number]}
  DangerStartNumber={[Function Number]}
  DisplayWarningColors="false"
  WarningStartNumber={[Function Number]}
  radialCounterClass={[Function String]}
  radialStartValue={[Function Number]}
  radialStrokeDashOffsetValue={[Function Number]}
>
  <span
    placement="bottom"
  >
    <svg
      class="radial-counter"
      height="15"
      width="20"
    >
      <circle
        class="radial-counter-underlay"
        cx="50%"
        cy="50%"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="radial-counter-overlay radial-counter-safe"
        cx="50%"
        cy="50%"
        fill="none"
        r="6"
        stroke-width="2"
        style="stroke-dashoffset: 37.6991;"
      />
    </svg>
  </span>
</pf-radial-text-counter>
`;

exports[`RadialTextCounterComponent should show radial text counter 1`] = `
<pf-radial-text-counter
  DangerStartNumber={[Function Number]}
  DisplayWarningColors="false"
  WarningStartNumber={[Function Number]}
  radialCounterClass={[Function String]}
  radialStartValue={[Function Number]}
  radialStrokeDashOffsetValue={[Function Number]}
>
  <span
    placement="bottom"
  >
    <svg
      class="radial-counter"
      height="15"
      width="20"
    >
      <circle
        class="radial-counter-underlay"
        cx="50%"
        cy="50%"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="radial-counter-overlay radial-counter-safe"
        cx="50%"
        cy="50%"
        fill="none"
        r="6"
        stroke-width="2"
        style="stroke-dashoffset: 37.6991;"
      />
    </svg>
  </span>
</pf-radial-text-counter>
`;
